# witch-way

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Main.cpp  README.md  build.bash  main.odin  save.json  todo.txt  witch-way
assets/spells/: eye_of_nebula.json
headers/: game.h  game.hpp  inventory.hpp  items.hpp  player.hpp
save_data/save0/: player_data.json  save_data.json
save_data/save1/: player_data.json  save_data.json
save_data/save2/: player_data.json  save_data.json
save_data/save3/: player_data.json  save_data.json
src/: 2  camera.odin  collision.odin  debug.odin  draw.odin  editor.odin  enemy.odin  farmland.odin  game.odin  game_objects.odin  gamestate.odin  gf  globals.odin  inventory.cpp  inventory.odin  items.cpp  level.odin  main.cpp  main.odin  menu.odin  object.odin  player.cpp  player.odin  saveload.odin  spell_handler.odin  spell_list.odin  spells.odin  tilegrid.odin  tiles.odin  wand.odin
